Fixed visibility issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,19 @@
 
 @font-face { font-family: got; src: url('../font/got.ttf'); } 
 
+.q1 {
+    display:none;
+} 
+.q2 {
+    display:none;
+}
+.q3 {
+    display:none
+}
+.q4 {
+    display:none;
+}
+.q5 {
+    display:none;
+}
+
